--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>LOG IN</h1>
             <label>Username</label>
             <input type="text" placeholder="Ingrese usuario" id="usuario">
-            <label for="">Password</label>
+          <!--  <label for="">Password</label> -->
             <!-- <input type="password" placeholder="Ingrese contraseña" id="clave"> -->
 
             <input type="password" placeholder="Ingrese contraseña" class="passw" id="Input"> 
